alignment and padding fixed

--- a/WDD230/lesson4/CSS/medium.css
+++ b/WDD230/lesson4/CSS/medium.css
@@ -13,7 +13,7 @@
     
     /*----------- NAVIGATION --------------*/
         #navWrapper nav button {display: none;}
-        #navWrapper nav ul {margin-left: 2%;}
+        #navWrapper nav ul {margin-left: 2%; margin-bottom: 0;}
         #navWrapper nav ul li {float: left;}
     
         #navWrapper nav ul li a{padding: .5rem 2rem; text-align: center;}
